--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -442,7 +442,3 @@ header {
   font-style: italic;
   padding: 0 30px;
 }
-
-.case-image {
-  width: 70%;
-}
